fix(ui): :children_crossing: fix CLS in header image
Specify the width (instead of the height) in the root route header image, to avoid layout shift when the image loads.

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -27,7 +27,7 @@ header.bvs-header h1 {
 }
 
 header.bvs-header h1 img {
-    height: 1.5em;
+    width: 1.5em;
 }
 
 header.bvs-header > nav a {
